I corrected the flexbox layout for .spell-page. for good horizontla alignment.

--- a/style.css
+++ b/style.css
@@ -32,9 +32,16 @@ body {
 
 .spell-page {
   display: flex;
+  flex-direction: row;
+  margin-top: 20px;
 }
 
-.page-left,
+.page-left{
+  flex: 1;
+  padding-top:50px;
+  padding-right: 200px;
+  
+}
 .page-right {
   flex: 1;
 }
